Rename star.js to Star.js in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="libraries/p5.sound.min.js"></script>
     <script src="vehicle.js"></script>
     <script src="sketch.js"></script>
-    <script src="star.js"></script>
+    <script src="Star.js"></script>
     <script src="obstacle.js"></script>
     <script src="bullet.js"></script>
   </head>
