--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script src="vehicle.js"></script>
     <script src="bullet.js"></script>
-    <script src="star.js"></script>
+    <script src="Star.js"></script>
     <script src="obstacle.js"></script>
     <script src="sketch.js"></script>
   </head>
